Fixed layout bug that made pages off center

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -15,7 +15,7 @@ body {
 }
 
 .main-div {
-	min-height: calc(100% - var(--navbar-height));
+	height: calc(100% - var(--navbar-height));
 }
 
 a {
